
cmake_minimum_required (VERSION 3.22.1)

project(gnu, LANGUAGES C CXX)

set(gnu_SOURCES)

list(APPEND gnu_SOURCES 
    base64_gnu.c
    common_gnu.c
    djgpp/ioctl_gnu.c
    float_gnu.c
### util with main	gcryptrnd.c
### util with main	gen-posix-lock-obj.c
### util with main	gen-w32-lock-obj.c
    global_gnu.c
    hash_gnu.c
    iconv_gnu.c
    init_gnu.c
    int_gnu.c
    lock_gnu.c
    misc_gnu.c
    nettle/nettle_cast128-meta_gnu.c
    nettle/nettle_gcm-aes128-meta_gnu.c
    nettle/nettle_rsa2openpgp_gnu.c
    random_gnu.c
    read-file-gnu.c
    secmem_gnu.c
    sexp_gnu.c
    threadlib_gnu.c
    unistd_gnu.c
    version_libgnu.c
    visibility_gnu.c
    xsize_gnu.c
#    os2compat2.c #alignment errors in linux
    error_gnu.c
    malloc_gnu.c
    log_gnu.c
    accelerated/x86/aes-cbc-x86-aesni_gnu.c
    accelerated/x86/aes-cbc-x86-ssse3_gnu.c
    accelerated/x86/aes-ccm-x86-aesni_gnu.c
    accelerated/x86/aes-gcm-padlock_gnu.c
    accelerated/x86/aes-gcm-x86-aesni_gnu.c
    accelerated/x86/aes-gcm-x86-pclmul_gnu.c
    accelerated/x86/aes-gcm-x86-ssse3_gnu.c
    accelerated/x86/aes-padlock_gnu.c
    accelerated/x86/hmac-padlock_gnu.c
    accelerated/x86/hmac-x86-ssse3_gnu.c
    accelerated/x86/sha-padlock_gnu.c
    accelerated/x86/sha-x86-ssse3_gnu.c
    accelerated/x86/x86-common_gnu.c
    accelerated/accelerated_gnu.c
    accelerated/cryptodev-gcm_gnu.c
    accelerated/cryptodev_gnu.c
    algorithms/cert_types_gnu.c
    algorithms/ciphers_gnu.c
    algorithms/ciphersuites_gnu.c
    algorithms/ecc_algorithms_gnu.c
    algorithms/kx_gnu.c
    algorithms/mac_algorithms_gnu.c
    algorithms/protocols_gnu.c
    algorithms/publickey_gnu.c
    algorithms/secparams_gnu.c
    algorithms/sign_algorithms_gnu.c
    auth/anon_gnu.c
    auth/anon_ecdh_gnu.c
    auth/cert_gnu.c
    auth/dh_common_gnu.c
    auth/dhe_gnu.c
    auth/dhe_psk_gnu.c
    auth/ecdhe_gnu.c
    auth/psk_gnu.c
    auth/psk_passwd_gnu.c
    auth/rsa_gnutls_gnu.c
    auth/rsa_psk_gnu.c
    auth/srp_auth_gnu.c
    auth/srp_passwd_gnu.c
    auth/srp_rsa_gnu.c
    auth/srp_sb64_gnu.c
    cipher/arcfour_gnu.c
    cipher/blowfish_gnu.c
    cipher/camellia-glue_gnu.c
    cipher/camellia_gnu.c
    cipher/cast5_gnu.c
    cipher/cipher-aeswrap_gnu.c
    cipher/cipher-cbc_gnu.c
    cipher/cipher-ccm_gnu.c
    cipher/cipher-cfb_gnu.c
    cipher/cipher-cmac_gnu.c
    cipher/cipher-ctr_gnu.c
    cipher/cipher-gcm_gnu.c
    cipher/cipher-ofb_gnu.c
    cipher/cipher-selftest_gnu.c
    cipher/cipher_list_gnu.c
    cipher/crc_gnu.c
    cipher/des_gnu.c
    cipher/dsa-common_gnu.c
    cipher/dsa_gnu.c
    cipher/ecc-curves_gnu.c
    cipher/ecc-ecdsa_gnu.c
    cipher/ecc-eddsa_gnu.c
    cipher/ecc-gost_gnu.c
    cipher/ecc-misc_gnu.c
    cipher/ecc_cipher_gnu.c
    cipher/elgamal_gnu.c
    cipher/gost28147_gnu.c
    cipher/gostr3411-94_gnu.c
    cipher/hash-common_gnu.c
    cipher/hmac-tests_gnu.c
    cipher/idea_gnu.c
    cipher/kdf_gnu.c
    cipher/mac-cmac_gnu.c
    cipher/mac-gmac_gnu.c
    cipher/mac-hmac_gnu.c
    cipher/mac_cipher_gnu.c
    cipher/md_gnu.c
    cipher/md5_gnu.c
    cipher/md5_cypher_gnu.c
    cipher/md4_gnu.c
    cipher/primegen_gnu.c
    cipher/pubkey-util_gnu.c
    cipher/pubkey_cipher_gnu.c
    cipher/rfc2268_gnu.c
    cipher/rijndael_gnu.c
    cipher/rmd160_gnu.c
    cipher/rsa-common_gnu.c
    cipher/rsa_gnu.c
    cipher/salsa20_gnu.c
    cipher/scrypt_gnu.c
    cipher/seed_gnu.c
    cipher/sha1_gnu.c
    cipher/sha256_gnu.c
    cipher/sha512_gnu.c
    cipher/stribog_gnu.c
    cipher/tiger_gnu.c
    cipher/serpent_gnu.c
    cipher/twofish_gnu.c
    cipher/whirlpool_gnu.c
    compat/clock_gnu.c
    compat/compat_compat_gnu.c
    compat/getpid_gnu.c
    djgpp/getpwnam_gnu.c
    djgpp/unsetenv_gnu.c
    ext/alpn_gnu.c
    ext/cert_type_gnu.c
    ext/dumbfw_gnu.c
    ext/ecc_ext_gnu.c
    ext/etm_gnu.c
    ext/ext_master_secret_gnu.c
    ext/heartbeat_gnu.c
    ext/max_record_gnu.c
    ext/safe_renegotiation_gnu.c
    ext/server_name_gnu.c
    ext/session_ticket_gnu.c
    ext/signature_gnu.c
    ext/srp_wrapper_gnu.c
    ext/srtp_gnu.c
    ext/status_request_gnu.c
    extras/hex_gnu.c
    extras/randomart_gnu.c
    misc/cvsuser_gnu.c
    mpi/generic/mpih-add1_gnu.c
    mpi/generic/mpih-lshift_gnu.c
    mpi/generic/mpih-mul1_gnu.c
    mpi/generic/mpih-mul2_gnu.c
    mpi/generic/mpih-mul3_gnu.c
    mpi/generic/mpih-rshift_gnu.c
    mpi/generic/mpih-sub1_gnu.c
    mpi/generic/udiv-w-sdiv_gnu.c
    mpi/ec-ed25519_gnu.c
    mpi/ec_gnu.c
    mpi/mpi-add_gnu.c
    mpi/mpi-bit_gnu.c
    mpi/mpi-cmp_gnu.c
    mpi/mpi-div_gnu.c
    mpi/mpi-gcd_gnu.c
    mpi/mpi-inline_gnu.c
    mpi/mpi-inv_gnu.c
    mpi/mpi-mod_gnu.c
    mpi/mpi-mpow_gnu.c
    mpi/mpi-mul_gnu.c
    mpi/mpi-pow_gnu.c
    mpi/mpi-scan_gnu.c
    mpi/mpicoder_gnu.c
    mpi/mpih-div_gnu.c
    mpi/mpih-mul_gnu.c
    mpi/mpiutil_gnu.c
    nettle/nettle-internal_gnu.c
    nettle/nettle-meta-aeads_gnu.c
    nettle/nettle-meta-armors_gnu.c
    nettle/nettle-meta-ciphers_gnu.c
    nettle/nettle-meta-hashes_gnu.c
    nettle/nettle_aes-decrypt-internal_gnu.c
    nettle/nettle_aes-decrypt_gnu.c
    nettle/nettle_aes-encrypt-internal_gnu.c
    nettle/nettle_aes-encrypt-table_gnu.c
    nettle/nettle_aes-encrypt_gnu.c
    nettle/nettle_aes-invert-internal_gnu.c
    nettle/nettle_aes-set-decrypt-key_gnu.c
    nettle/nettle_aes-set-encrypt-key_gnu.c
    nettle/nettle_aes-set-key-internal_gnu.c
    nettle/nettle_aes128-meta_gnu.c
    nettle/nettle_aes128-set-decrypt-key_gnu.c
    nettle/nettle_aes128-set-encrypt-key_gnu.c
    nettle/nettle_aes192-meta_gnu.c
    nettle/nettle_aes192-set-decrypt-key_gnu.c
    nettle/nettle_aes192-set-encrypt-key_gnu.c
    nettle/nettle_aes256-meta_gnu.c
    nettle/nettle_aes256-set-decrypt-key_gnu.c
    nettle/nettle_aes256-set-encrypt-key_gnu.c
    nettle/nettle_aesdata_gnu.c
    nettle/nettle_arcfour-crypt_gnu.c
    nettle/nettle_arcfour_gnu.c
    nettle/nettle_arctwo-meta_gnu.c
    nettle/nettle_arctwo_gnu.c
    nettle/nettle_base16-decode_gnu.c
    nettle/nettle_base16-encode_gnu.c
    nettle/nettle_base16-meta_gnu.c
    nettle/nettle_base64-decode_gnu.c
    nettle/nettle_base64-encode_gnu.c
    nettle/nettle_base64-meta_gnu.c
    nettle/nettle_base64url-decode_gnu.c
    nettle/nettle_base64url-encode_gnu.c
    nettle/nettle_base64url-meta_gnu.c
    nettle/nettle_bignum-random-prime_gnu.c
    nettle/nettle_bignum-random_gnu.c
    nettle/nettle_bignum_gnu.c
    nettle/nettle_blowfish_gnu.c
    nettle/nettle_buffer-init_gnu.c
    nettle/nettle_buffer_gnu.c
    nettle/nettle_camellia-absorb_gnu.c
    nettle/nettle_camellia-crypt-internal_gnu.c
    nettle/nettle_camellia-invert-key_gnu.c
    nettle/nettle_camellia-table_gnu.c
    nettle/nettle_camellia128-crypt_gnu.c
    nettle/nettle_camellia128-meta_gnu.c
    nettle/nettle_camellia128-set-decrypt-key_gnu.c
    nettle/nettle_camellia128-set-encrypt-key_gnu.c
    nettle/nettle_camellia192-meta_gnu.c
    nettle/nettle_camellia256-crypt_gnu.c
    nettle/nettle_camellia256-meta_gnu.c
    nettle/nettle_camellia256-set-decrypt-key_gnu.c
    nettle/nettle_camellia256-set-encrypt-key_gnu.c
    nettle/nettle_cast128_gnu.c
    nettle/nettle_cbc_gnu.c
    nettle/nettle_ccm-aes128_gnu.c
    nettle/nettle_ccm-aes192_gnu.c
    nettle/nettle_ccm-aes256_gnu.c
    nettle/nettle_ccm_gnu.c
    nettle/nettle_chacha-core-internal_gnu.c
    nettle/nettle_chacha-crypt_gnu.c
    nettle/nettle_chacha-poly1305-meta_gnu.c
    nettle/nettle_chacha-poly1305_gnu.c
    nettle/nettle_chacha-set-key_gnu.c
    nettle/nettle_chacha-set-nonce_gnu.c
    nettle/nettle_cipher_nettle_gnu.c
    nettle/nettle_cnd-copy_gnu.c
    nettle/nettle_ctr_gnu.c
    nettle/nettle_curve25519-eh-to-x_gnu.c
    nettle/nettle_curve25519-mul-g_gnu.c
    nettle/nettle_curve25519-mul_gnu.c
    nettle/nettle_der-iterator_gnu.c
    nettle/nettle_der2dsa_gnu.c
    nettle/nettle_der2rsa_gnu.c
    nettle/nettle_des-compat_gnu.c
    nettle/nettle_des_gnu.c
    nettle/nettle_des3_gnu.c
    nettle/nettle_desdata_gnu.c
    nettle/nettle_drbg-aes-self-test_gnu.c
    nettle/nettle_drbg-aes_gnu.c
    nettle/nettle_dsa-compat-keygen_gnu.c
    nettle/nettle_dsa-compat_gnu.c
    nettle/nettle_dsa-gen-params_gnu.c
    nettle/nettle_dsa-hash_gnu.c
    nettle/nettle_dsa-keygen-fips186_gnu.c
    nettle/nettle_dsa-keygen_gnu.c
    nettle/nettle_dsa-sha1-sign_gnu.c
    nettle/nettle_dsa-sha1-verify_gnu.c
    nettle/nettle_dsa-sha256-sign_gnu.c
    nettle/nettle_dsa-sha256-verify_gnu.c
    nettle/nettle_dsa-sign_gnu.c
    nettle/nettle_dsa-validate_gnu.c
    nettle/nettle_dsa-verify_gnu.c
    nettle/nettle_eax-aes128-meta_gnu.c
    nettle/nettle_dsa2sexp_gnu.c
    nettle/nettle_dsa_gnu.c
    nettle/nettle_eax-aes128_gnu.c
    nettle/nettle_eax_gnu.c
    nettle/nettle_ecc-192_gnu.c
    nettle/nettle_ecc-224_gnu.c
    nettle/nettle_ecc-25519_gnu.c
    nettle/nettle_ecc-256_gnu.c
    nettle/nettle_ecc-384_gnu.c
    nettle/nettle_ecc-521_gnu.c
    nettle/nettle_ecc-a-to-j_gnu.c
    nettle/nettle_ecc-add-eh_gnu.c
    nettle/nettle_ecc-add-ehh_gnu.c
    nettle/nettle_ecc-add-jja_gnu.c
    nettle/nettle_ecc-add-jjj_gnu.c
    nettle/nettle_ecc-dup-eh_gnu.c
    nettle/nettle_ecc-dup-jj_gnu.c
    nettle/nettle_ecc-ecdsa-sign_gnu.c
    nettle/nettle_ecc-ecdsa-verify_gnu.c
    nettle/nettle_ecc-eh-to-a_gnu.c
    nettle/nettle_ecc-hash_gnu.c
    nettle/nettle_ecc-j-to-a_gnu.c
    nettle/nettle_ecc-mod-arith_gnu.c
    nettle/nettle_ecc-mod-inv_gnu.c
    nettle/nettle_ecc-mod_gnu.c
    nettle/nettle_ecc-mul-a-eh_gnu.c
    nettle/nettle_ecc-mul-a_gnu.c
    nettle/nettle_ecc-mul-g-eh_gnu.c
    nettle/nettle_ecc-mul-g_gnu.c
    nettle/nettle_ecc-pm1-redc_gnu.c
    nettle/nettle_ecc-point-mul-g_gnu.c
    nettle/nettle_ecc-point-mul_gnu.c
    nettle/nettle_ecc-point_gnu.c
    nettle/nettle_ecc-pp1-redc_gnu.c
    nettle/nettle_ecc-random_gnu.c
    nettle/nettle_ecc-scalar_gnu.c
    nettle/nettle_ecc-size_gnu.c
    nettle/nettle_eccdata_gnu.c
    nettle/nettle_ecdsa-keygen_gnu.c
    nettle/nettle_ecdsa-sign_gnu.c
    nettle/nettle_ecdsa-verify_gnu.c
    nettle/nettle_ed25519-sha512-pubkey_gnu.c
    nettle/nettle_ed25519-sha512-sign_gnu.c
    nettle/nettle_ed25519-sha512-verify_gnu.c
    nettle/nettle_eddsa-compress_gnu.c
    nettle/nettle_eddsa-decompress_gnu.c
    nettle/nettle_eddsa-expand_gnu.c
    nettle/nettle_eddsa-hash_gnu.c
    nettle/nettle_eddsa-pubkey_gnu.c
    nettle/nettle_eddsa-sign_gnu.c
    nettle/nettle_eddsa-verify_gnu.c
    nettle/nettle_egd_gnu.c
    nettle/nettle_fat-arm_gnu.c
    nettle/nettle_fat-x86_64_gnu.c
    nettle/nettle_gcm-aes_gnu.c
    nettle/nettle_gcm-aes128_gnu.c
    nettle/nettle_gcm-aes192-meta_gnu.c
    nettle/nettle_gcm-aes192_gnu.c
    nettle/nettle_gcm-aes256-meta_gnu.c
    nettle/nettle_gcm-aes256_gnu.c
    nettle/nettle_gcm-camellia128-meta_gnu.c
    nettle/nettle_gcm-camellia128_gnu.c
    nettle/nettle_gcm-camellia256-meta_gnu.c
    nettle/nettle_gcm-camellia256_gnu.c
    nettle/nettle_gcm_gnu.c
    nettle/nettle_gcmdata_gnu.c
    nettle/nettle_getopt_gnu.c
    nettle/nettle_getopt1_gnu.c
    nettle/nettle_gmp-glue_gnu.c
    nettle/nettle_gosthash94-meta_gnu.c
    nettle/nettle_gosthash94_gnu.c
    nettle/nettle_hmac-md5_gnu.c
    nettle/nettle_hmac-ripemd160_gnu.c
    nettle/nettle_hmac-sha1_gnu.c
    nettle/nettle_hmac-sha224_gnu.c
    nettle/nettle_hmac-sha256_gnu.c
    nettle/nettle_hmac-sha384_gnu.c
    nettle/nettle_hmac-sha512_gnu.c
    nettle/nettle_hmac_gnu.c
    nettle/nettle_init_nettle_gnu.c
    nettle/nettle_knuth-lfib_gnu.c
    nettle/nettle_mac_nettle_gnu.c
    nettle/nettle_md2-meta_gnu.c
    nettle/nettle_md2_gnu.c
    nettle/nettle_md4-meta_gnu.c
    nettle/nettle_md4_gnu.c
    nettle/nettle_md5-compat_gnu.c
    nettle/nettle_md5-compress_gnu.c
    nettle/nettle_md5-meta_gnu.c
    nettle/nettle_md5_gnu.c
    nettle/nettle_memxor_gnu.c
    nettle/nettle_memxor3_gnu.c
    nettle/nettle_mini-gmp_gnu.c
    nettle/nettle_mpi_nettle_gnu.c
    nettle/nettle_pbkdf2-hmac-sha1_gnu.c
    nettle/nettle_pbkdf2-hmac-sha256_gnu.c
    nettle/nettle_pbkdf2_gnu.c
    nettle/nettle_pgp-encode_gnu.c
    nettle/nettle_pk_gnu.c
    nettle/nettle_pkcs1-decrypt_gnu.c
    nettle/nettle_pkcs1-encrypt_gnu.c
    nettle/nettle_pkcs1-rsa-digest_gnu.c
    nettle/nettle_pkcs1-rsa-md5_gnu.c
    nettle/nettle_pkcs1-rsa-sha1_gnu.c
    nettle/nettle_pkcs1-rsa-sha256_gnu.c
    nettle/nettle_pkcs1-rsa-sha512_gnu.c
    nettle/nettle_pkcs1_gnu.c
    nettle/nettle_poly1305-aes_gnu.c
    nettle/nettle_poly1305-internal_gnu.c
    nettle/nettle_provable-prime_gnu.c
    nettle/nettle_realloc_gnu.c
    nettle/nettle_ripemd160-compress_gnu.c
    nettle/nettle_ripemd160-meta_gnu.c
    nettle/nettle_ripemd160_gnu.c
    nettle/nettle_rnd-common_gnu.c
    nettle/nettle_rnd-fips_gnu.c
    nettle/nettle_rnd_gnu.c
    nettle/nettle_rsa-blind_gnu.c
    nettle/nettle_rsa-decrypt-tr_gnu.c
    nettle/nettle_rsa-decrypt_gnu.c
    nettle/nettle_rsa-encrypt_gnu.c
    nettle/nettle_rsa-keygen-fips186_gnu.c
    nettle/nettle_rsa-keygen_gnu.c
    nettle/nettle_rsa-md5-sign-tr_gnu.c
    nettle/nettle_rsa-md5-sign_gnu.c
    nettle/nettle_rsa-md5-verify_gnu.c
    nettle/nettle_rsa-pkcs1-sign-tr_gnu.c
    nettle/nettle_rsa-pkcs1-sign_gnu.c
    nettle/nettle_rsa-pkcs1-verify_gnu.c
    nettle/nettle_rsa-sha1-sign-tr_gnu.c
    nettle/nettle_rsa-sha1-sign_gnu.c
    nettle/nettle_rsa-sha1-verify_gnu.c
    nettle/nettle_rsa-sha256-sign-tr_gnu.c
    nettle/nettle_rsa-sha256-sign_gnu.c
    nettle/nettle_rsa-sha256-verify_gnu.c
    nettle/nettle_rsa-sha512-sign-tr_gnu.c
    nettle/nettle_rsa-sha512-sign_gnu.c
    nettle/nettle_rsa-sha512-verify_gnu.c
    nettle/nettle_rsa-sign-tr_gnu.c
    nettle/nettle_rsa-sign_gnu.c
    nettle/nettle_rsa-verify_gnu.c
    nettle/nettle_rsa2sexp_gnu.c
    nettle/nettle_rsa_gnu.c
    nettle/nettle_salsa20-128-set-key_gnu.c
    nettle/nettle_salsa20-256-set-key_gnu.c
    nettle/nettle_salsa20-core-internal_gnu.c
    nettle/nettle_salsa20-crypt_gnu.c
    nettle/nettle_salsa20-set-key_gnu.c
    nettle/nettle_salsa20-set-nonce_gnu.c
    nettle/nettle_salsa20r12-crypt_gnu.c
    nettle/nettle_sec-add-1_gnu.c
    nettle/nettle_sec-sub-1_gnu.c
    nettle/nettle_sec-tabselect_gnu.c
    nettle/nettle_serpent-decrypt_gnu.c
    nettle/nettle_serpent-encrypt_gnu.c
    nettle/nettle_serpent-meta_gnu.c
    nettle/nettle_serpent-set-key_gnu.c
    nettle/nettle_sexp-format_gnu.c
    nettle/nettle_sexp-transport-format_gnu.c
    nettle/nettle_sexp-transport_gnu.c
    nettle/nettle_sexp_gnu.c
    nettle/nettle_sexp2dsa_gnu.c
    nettle/nettle_sexp2bignum_gnu.c
    nettle/nettle_sexp2rsa_gnu.c
    nettle/nettle_sha-example_gnu.c
    nettle/nettle_sha1-compress_gnu.c
    nettle/nettle_sha1-meta_gnu.c
    nettle/nettle_sha1_gnu.c
    nettle/nettle_sha224-meta_gnu.c
    nettle/nettle_sha256-compress_gnu.c
    nettle/nettle_sha256-meta_gnu.c
    nettle/nettle_sha256_gnu.c
    nettle/nettle_sha3-224-meta_gnu.c
    nettle/nettle_sha3-224_gnu.c
    nettle/nettle_sha3-256-meta_gnu.c
    nettle/nettle_sha3-256_gnu.c
    nettle/nettle_sha3-384-meta_gnu.c
    nettle/nettle_sha3-384_gnu.c
    nettle/nettle_sha3-512-meta_gnu.c
    nettle/nettle_sha3-512_gnu.c
    nettle/nettle_sha3-permute_gnu.c
    nettle/nettle_sha3_gnu.c
    nettle/nettle_sha384-meta_gnu.c
    nettle/nettle_sha512-224-meta_gnu.c
    nettle/nettle_sha512-256-meta_gnu.c
    nettle/nettle_sha512-compress_gnu.c
    nettle/nettle_sha512-meta_gnu.c
    nettle/nettle_sha512_gnu.c
    nettle/nettle_shadata_gnu.c
    nettle/nettle_twofish-meta_gnu.c
    nettle/nettle_twofish_gnu.c
    nettle/nettle_twofishdata_gnu.c
    nettle/nettle_umac-l2_gnu.c
    nettle/nettle_umac-l3_gnu.c
    nettle/nettle_umac-nh-n_gnu.c
    nettle/nettle_umac-nh_gnu.c
    nettle/nettle_umac-poly128_gnu.c
    nettle/nettle_umac-poly64_gnu.c
    nettle/nettle_umac-set-key_gnu.c
    nettle/nettle_umac128_gnu.c
    nettle/nettle_umac32_gnu.c
    nettle/nettle_umac64_gnu.c
    nettle/nettle_umac96_gnu.c
    nettle/nettle_version_gnu.c
    nettle/nettle_write-be32_gnu.c
    nettle/nettle_write-le32_gnu.c
    nettle/nettle_write-le64_gnu.c
    nettle/nettle_yarrow256_gnu.c
    nettle/nettle_yarrow_key_event_gnu.c
    opencdk/armor_gnu.c
    opencdk/kbnode_gnu.c
    opencdk/keydb_gnu.c
    opencdk/literal_gnu.c
    opencdk/misc_opencdk_gnu.c
    opencdk/new-packet_gnu.c
    opencdk/pubkey_pgp_gnu.c
    opencdk/read-packet_gnu.c
    opencdk/seskey_gnu.c
    opencdk/sig-check_gnu.c
    opencdk/stream_gnu.c
    opencdk/write-packet_gnu.c
    openpgp/compat_pgp_gnu.c
    openpgp/extras_gnu.c
    openpgp/gnutls_openpgp_gnu.c
    openpgp/output_pgp_gnu.c
    openpgp/pgp_gnu.c
    openpgp/pgpverify_gnu.c
    openpgp/privkey_pgp_gnu.c
    unictype/ctype_alpha_gnu.c
    unictype/ctype_space_gnu.c
    unistr/u8-mbtoucr_gnu.c
    unistr/u8-uctomb-aux_gnu.c
    unistr/u8-uctomb_gnu.c
    uniwidth/width_gnu.c
    x509/crl_gnu.c
    x509/crl_write_gnu.c
    x509/crq_gnu.c
    x509/dn_gnu.c
    x509/email-verify_gnu.c
    x509/extensions_gnu.c
    x509/gnutls_common_gnu.c
    x509/hostname-verify_gnu.c
    x509/key_decode_gnu.c
    x509/key_encode_gnu.c
    x509/mpi_x509_gnu.c
    x509/name_constraints_gnu.c
    x509/ocsp_gnu.c
    x509/ocsp_output_gnu.c
    x509/output_x509_gnu.c
    x509/pkcs12_gnu.c
    x509/pkcs12_encr_gnu.c
    x509/pkcs12_bag_gnu.c
    x509/privkey_openssl_gnu.c
    x509/privkey_pkcs8_gnu.c
    x509/privkey_x509_gnu.c
    x509/sign_x509_gnu.c
    x509/verify-high_gnu.c
    x509/verify-high2_gnu.c
    x509/verify_x509_gnu.c
    x509/x509_gnu.c
    x509/x509_dn_gnu.c
    x509/x509_ext_gnu.c
    x509/x509_write_gnu.c
    allocator_gnu.c
    areadlink_gnu.c
    asnprintf_gnu.c
    asprintf_gnu.c
    atexit_gnu.c
    atfork_gnu.c
    ath_gnu.c
    auto-verify_gnu.c
    basename_gnu.c
    binary-io_gnu.c
    bindtextdom_gnu.c
    bitrotate_gnu.c
    btowc_gnu.c
    c-ctype_gnu.c
    c-strcasecmp_gnu.c
    c-strncasecmp_gnu.c
    c-strstr_gnu.c
    canonicalize-lgpl_gnu.c
    careadlinkat_gnu.c
    cldr-plural-exp_gnu.c
    cldr-plural_gnu.c
    cldr-plurals_gnu.c
    clean-temp_gnu.c
    close_gnu.c
    closeout_gnu.c
    code-from-errno_gnu.c
    code-to-errno_gnu.c
    coding_gnu.c
    #color_gnu.c #not needed
    concat-filename_gnu.c
    context_gnu.c

    #convert charset needed by libasprintf
    convert_encoding_gnu.c

    copy-acl_gnu.c
    copy-file_gnu.c
    crypto-api_gnu.c
    crypto-backend_gnu.c
    crypto-selftests-pk_gnu.c
    crypto-selftests_gnu.c
    csharpcomp_gnu.c
    csharpexec_gnu.c
    dcgettext_gnu.c
    dcigettext_gnu.c
    dcngettext_gnu.c
    debug_gnu.c
    decoding_gnu.c
    dgettext_gnu.c
    dir-list_gnu.c
    dirname-lgpl_gnu.c
    dirname_gnu.c
    dngettext_gnu.c
    dumpsexp_gnu.c
    element_gnu.c
    envsubst_gnu.c
    error-progname_gnu.c
    errors_gnu.c
    estream-printf_gnu.c
    estream_gnu.c
    exitfail_gnu.c
    explodename_gnu.c
    fatal-signal_gnu.c
    fd-hook_gnu.c
    file-list_gnu.c
    file-ostream_gnu.c
    file-ostream.oo_gnu.c
    filter-quote_gnu.c
    filter-sr-latin_gnu.c
    finddomain_gnu.c
    fips_gnu.c
    fopen_gnu.c
    format-awk_gnu.c
    format-boost_gnu.c
    format-c_gnu.c
    format-csharp_gnu.c
    format-elisp_gnu.c
    format-gcc-internal_gnu.c
    format-gfc-internal_gnu.c
    format-java_gnu.c
    format-javascript_gnu.c
    format-kde-kuit_gnu.c
    format-kde_gnu.c
    format-librep_gnu.c
    format-lisp_gnu.c
    format-lua_gnu.c
    format-pascal_gnu.c
    format-perl-brace_gnu.c
    format-perl_gnu.c
    format-php_gnu.c
    format-python-brace_gnu.c
    format-python_gnu.c
    format-qt-plural_gnu.c
    format-qt_gnu.c
    format-scheme_gnu.c
    format-sh_gnu.c
    format-tcl_gnu.c
    format-ycp_gnu.c
    format_gnu.c
    fstat_gnu.c
    fstrcmp_gnu.c
    fwriteerror_gnu.c
    gcd_gnu.c
    getdelim_gnu.c
    getline_gnu.c
    getopt_gnu.c
    getopt1_gnu.c
    getrandom_gnu.c
    gettext-po_gnu.c
    gettext_gnu.c
    gettimeofday_gnu.c
    ghash_gnu.c
    gl_list_gnu.c
    gl_xlist_gnu.c
    glist_gnu.c
    gmessages_gnu.c
    gnutls_alert_gnu.c
    gnutls_anon_cred_gnu.c
    gnutls_asn1_tab_gnu.c
    gnutls_auth_gnu.c
    gnutls_buffers_gnu.c
    gnutls_cert_gnu.c
    gnutls_cipher_gnu.c
    gnutls_cipher_int_gnu.c
    gnutls_compress_gnu.c
    gnutls_constate_gnu.c
    gnutls_datum_gnu.c
    gnutls_db_gnu.c
    gnutls_dh_gnu.c
    gnutls_dtls_gnu.c
    gnutls_ecc_gnu.c
    gnutls_errors_gnu.c
    gnutls_extensions_gnu.c
    gnutls_global_gnu.c
    gnutls_handshake_gnu.c
    gnutls_hash_int_gnu.c
    gnutls_helper_gnu.c
    gnutls_kx_gnu.c
    gnutls_mbuffers_gnu.c
    gnutls_mem_gnu.c
    gnutls_mpi_gnu.c
    gnutls_num_gnu.c
    gnutls_pcert_gnu.c
    gnutls_pk_gnu.c
    gnutls_priority_gnu.c
    gnutls_privkey_gnu.c
    gnutls_privkey_raw_gnu.c
    gnutls_psk_gnu.c
    gnutls_pubkey_gnu.c
    gnutls_random_gnu.c
    gnutls_range_gnu.c
    gnutls_record_gnu.c
    gnutls_session_gnu.c
    gnutls_session_pack_gnu.c
    gnutls_sig_gnu.c
    gnutls_srp_gnu.c
    gnutls_state_gnu.c
    gnutls_str_gnu.c
    gnutls_supplemental_gnu.c
    gnutls_ui_gnu.c
    gnutls_v2_compat_gnu.c
    gnutls_x509_gnu.c
    gnutlsxx_gnu.cpp
    gpg-error_gnu.c
    gprimes_gnu.c
    gstr_gnu.c
    gstrfuncs_gnu.c
    gstring_gnu.c
    hard-locale_gnu.c
    hash-pjw-bare_gnu.c
    hash-pjw_gnu.c
    hash-string_gnu.c
    hash-triple_gnu.c
    hmac-md5_gnu.c
    hmac-sha1_gnu.c
    hmac-sha256_gnu.c
    hmac-sha512_gnu.c
    hmac256_gnu.c
    hostname_gnu.c
    hwf-arm_gnu.c
    hwf-x86_gnu.c
    hwfeatures_gnu.c
    iconv_close_gnu.c
    iconv_open_gnu.c
    inet_ntop_gnu.c
    inet_pton_gnu.c
    intl-compat_gnu.c
    intl-exports_gnu.c
    iswblank_gnu.c
    itold_gnu.c
    #FIXME its_gnu.c
    javacomp_gnu.c
    javaexec_gnu.c
    javaversion_gnu.c
    kwset_gnu.c
    l10nflist_gnu.c
    lang-table_gnu.c
    langprefs_gnu.c
    loadmsgcat_gnu.c
    localcharset_gnu.c
    localealias_gnu.c
    localeconv_gnu.c
    localename_gnu.c
    locating-rule_gnu.c
    locks_gnu.c
    lstat_gnu.c
    m-fgrep_gnu.c
    m-regex_gnu.c
    malloca_gnu.c
    markup_gnu.c
    mbchar_gnu.c
    mbiter_gnu.c
    mbrlen_gnu.c
    mbrtowc_gnu.c
    mbsinit_gnu.c
    mbslen_gnu.c
    mbsstr_gnu.c
    mbswidth_gnu.c
    mbtowc_gnu.c
    mbuiter_gnu.c
    memchr_gnu.c
    memmove_gnu.c
    message_gnu.c
    missing-string_gnu.c
    mkerrcodes_gnu.c
    mkheader_gnu.c
    mkw32errmap_gnu.c
    mkw32errmap.map_gnu.c
    mman_w32_gnu.c
    mpicalc_gnu.c
    msgattrib_gnu.c
    msgcat_gnu.c
    msgcmp_gnu.c
    msgcomm_gnu.c
    msgconv_gnu.c
    msgen_gnu.c
    msgexec_gnu.c
    msgfilter_gnu.c
    msgfmt_gnu.c
    msggrep_gnu.c
    msginit_gnu.c
    msgl-ascii_gnu.c
    msgl-cat_gnu.c
    msgl-charset_gnu.c
    msgl-check_gnu.c
    msgl-english_gnu.c
    msgl-equal_gnu.c
    msgl-fsearch_gnu.c
    msgl-header_gnu.c
    msgl-iconv_gnu.c
    msgmerge_gnu.c
    msgunfmt_gnu.c
    msguniq_gnu.c
    msvc-inval_gnu.c
    msvc-nothrow_gnu.c
    ngettext_gnu.c
    nl_langinfo_gnu.c
    obstack_gnu.c
    open-catalog_gnu.c
    os2compat2_gnu.c
    osdep_gnu.c
    ostream_gnu.c
    ostream.oo_gnu.c
    parser_aux_gnu.c
    pin_gnu.c
    pkcs11_gnu.c
    pkcs11_int_gnu.c
    pkcs11_privkey_gnu.c
    pkcs11_secret_gnu.c
    pkcs11_write_gnu.c
    pkcs11x_gnu.c
    pkix_asn1_tab_gnu.c
    plural-count_gnu.c
    plural-eval_gnu.c
    plural-exp_gnu.c
    plural-table_gnu.c
    plural_gnu.c
    po-charset_gnu.c
    po-error_gnu.c
    po-gram-gen_gnu.c
    po-lex_gnu.c
    po-time_gnu.c
    po-xerror_gnu.c
    posix-lock_gnu.c
    posix-thread_gnu.c
    printf-args_gnu.c
    printf-parse_gnu.c
    printf_gnu.c
    progname_gnu.c
    progreloc_gnu.c
    propername_gnu.c
    raise_gnu.c
    random-csprng_gnu.c
    random-daemon_gnu.c
    random-fips_gnu.c
    random-system_gnu.c
    rawmemchr_gnu.c
    read-catalog-abstract_gnu.c
    read-catalog_gnu.c
    read-csharp_gnu.c
    read-desktop_gnu.c
    read-file_gnu.c
    read-java_gnu.c
    read-mo_gnu.c
    read-po_gnu.c
    read-properties_gnu.c
    read-resources_gnu.c
    read-stringtable_gnu.c
    read-tcl_gnu.c
    readlink_gnu.c
    realloc_gnu.c
    recode-sr-latin_gnu.c
    regcomp_gnu.c
    regex_gnu.c
    regex_internal_gnu.c
    regexec_gnu.c
    relocatable_gnu.c
    relocwrapper_gnu.c
    same_gnu.c
    search-path_gnu.c
    sentence_gnu.c
    setenv_gnu.c
    setlocale_gnu.c
    sigprocmask_gnu.c
    stat_gnu.c
    stdio-write_gnu.c
    stdmem_gnu.c
    stpcpy_gnu.c
    stpncpy_gnu.c
    str-list_gnu.c
    rndegd_gnu.c
    rndhw_gnu.c
    rndlinux_gnu.c
    rndunix_gnu.c
    rndw32_gnu.c
    rndw32ce_gnu.c
    safe-memfuncs_gnu.c
    strchrnul_gnu.c
    strerror-override_gnu.c
    strerror-sym_gnu.c
    strerror_gnu.c
    striconv_gnu.c
    striconveh_gnu.c
    striconveha_gnu.c
    strnlen_gnu.c
    strnlen1_gnu.c
    strsource-sym_gnu.c
    strsource_gnu.c
    strstr_gnu.c
    strtol_gnu.c
    strtoul_gnu.c
    structure_gnu.c
    styled-ostream_gnu.c
    styled-ostream.oo_gnu.c
    system-keys-dummy_gnu.c
    system-keys-win_gnu.c
    system_gnu.c
    system_override_gnu.c
    textdomain_gnu.c
    tmpdir_gnu.c
    tpm_gnu.c
    trim_gnu.c
    tsearch_gnu.c
    u64_gnu.c
    urlget_gnu.c
    urls_gnu.c
    vasnprintf_gnu.c
    vasprintf_gnu.c
    verify-tofu_gnu.c
    version_ans_gnu.c
    w32-gettext_gnu.c
    w32-lock_gnu.c
    w32-thread_gnu.c
    wcrtomb_gnu.c
    wctype-h_gnu.c
    wcwidth_gnu.c
    write-catalog_gnu.c
    write-csharp_gnu.c
    write-desktop_gnu.c
    write-java_gnu.c
    write-mo_gnu.c
    write-po_gnu.c
    write-properties_gnu.c
    write-qt_gnu.c
    write-resources_gnu.c
    write-stringtable_gnu.c
    write-tcl_gnu.c
    write-xml_gnu.c
    x-awk_gnu.c
    x-c_gnu.c
    x-csharp_gnu.c
    x-desktop_gnu.c
    x-elisp_gnu.c
    x-java_gnu.c
    x-javascript_gnu.c
    x-librep_gnu.c
    x-lisp_gnu.c
    x-lua_gnu.c
    x-perl_gnu.c
    x-php_gnu.c
    x-po_gnu.c
    x-python_gnu.c
    x-rst_gnu.c
    x-scheme_gnu.c
    x-sh_gnu.c
    x-smalltalk_gnu.c
    x-tcl_gnu.c
    x-vala_gnu.c
    x-ycp_gnu.c
    x509_b64_gnu.c
    xasprintf_gnu.c
    xconcat-filename_gnu.c
    xerror_gnu.c
    xgettext_gnu.c
    xmalloc_gnu.c
    xmalloca_gnu.c
    xreadlink_gnu.c
    xstrdup_gnu.c
    xstriconv_gnu.c
    xvasprintf_gnu.c
)

add_library(gnu STATIC ${gnu_SOURCES})

if(DEFINED TARGET_OS_WINDOWS)
    target_compile_definitions(gnu
        PRIVATE
        WIN64
        _LIB
        WIN32_LEAN_AND_MEAN
        GLEW_STATIC
    )

    set_property(TARGET gnu PROPERTY C_STANDARD 90)
    set_property(TARGET gnu PROPERTY C_STANDARD_REQUIRED OFF)
    set_property(TARGET gnu PROPERTY CXX_STANDARD 14)
    set_property(TARGET gnu PROPERTY CXX_STANDARD_REQUIRED OFF)

else()
    target_compile_definitions(gnu
        PRIVATE
        GLIB_COMPILATION
        _MBCS
        __need_nettle_getopt
        BUILD_GNU_INTERNAL
        IN_LIBASPRINTF
    )

endif()

nlc_target_add_supported_warning_options(gnu C
    -Wno-deprecated-declarations
    -Wno-deprecated-non-prototype
    -Wno-switch
    -Wno-visibility
    -Wno-nonnull
    -Wno-pointer-sign
    -Wno-tautological-pointer-compare
    -Wno-macro-redefined
    -Wno-single-bit-bitfield-constant-conversion
    -Wno-format
    -Wno-enum-conversion
    -Wno-pointer-bool-conversion
    -Wno-logical-not-parentheses
    -Wno-unused-value
)


